tests/smt2/error/assume-interpolant-error.smt2
(declare-const p Bool)
(declare-const q Bool)
(declare-const r Bool)
(define-const pq Bool (=> p q))
(define-const qr Bool (=> q r))
(define-const nr Bool (not r))
(define-const t Bool true)
(check-sat-assuming (p pq qr (not r)))
(get-interpolants (and p pq) (and qr (not r)))
(get-interpolants (and p pq) (and qr))
(check-sat-assuming (p pq qr nr t))
(get-interpolants (and p pq t) (and nr))
(get-interpolants (and p pq) (and qr nr))
(get-interpolants (and p pq t) (and qr nr))